--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@openzeppelin/contracts": "^5.4.0",
-    "@types/node": "^22.19.1",
-    "hardhat": "^3.0.15",
-    "typescript": "~5.8.0"
+    "@types/node": "^24.10.1",
+    "hardhat": "^2.27.1",
+    "prettier": "^3.7.1",
+    "prettier-plugin-solidity": "^2.2.0"
   }
 }
